@@ -678,6 +678,7 @@ test_player_ft2_note_off_after_invalid_ins
 test_player_ft2_note_off_fade
 test_player_ft2_note_off_sustain
 test_player_ft2_note_range
+test_player_ft2_offset_memory
 test_player_ft2_read_event
 test_player_ft2_tremor_delay
 test_player_ft2_tremor_reset
