@@ -1,0 +1,100 @@
+78 0 0 0 1753088 60 0 1024 -128 0 0 0
+78 0 0 1 1753088 60 1 1024 127 0 0 0
+156 0 1 0 1753088 60 0 784 -128 333 0 0
+156 0 1 1 1753088 60 1 784 127 333 0 0
+234 1 0 0 1753088 60 0 1024 -128 256 0 0
+234 1 0 1 1753088 60 1 1024 127 256 0 0
+312 1 1 0 1753088 60 0 784 -128 333 0 0
+312 1 1 1 1753088 60 1 784 127 333 0 0
+390 2 0 0 1753088 60 0 784 -128 256 0 0
+390 2 0 1 1753088 60 1 784 127 256 0 0
+468 2 1 0 1753088 60 0 544 -128 333 0 0
+468 2 1 1 1753088 60 1 544 127 333 0 0
+703 4 0 0 1753088 60 0 1024 -128 0 0 0
+703 4 0 1 1753088 60 1 1024 127 0 0 0
+781 4 1 0 1753088 60 0 784 -128 333 0 0
+781 4 1 1 1753088 60 1 784 127 333 0 0
+1015 6 0 0 1753088 60 0 1024 -128 0 0 0
+1015 6 0 1 1753088 60 1 1024 127 0 0 0
+1093 6 1 0 1753088 60 0 784 -128 333 0 0
+1093 6 1 1 1753088 60 1 784 127 333 0 0
+1328 8 0 0 1753088 60 0 1024 -128 0 0 0
+1328 8 0 1 1753088 60 1 1024 127 0 0 0
+1406 8 1 0 1753088 60 0 784 -128 333 0 0
+1406 8 1 1 1753088 60 1 784 127 333 0 0
+1640 10 0 0 1753088 60 0 1024 -128 256 0 0
+1640 10 0 1 1753088 60 1 1024 127 256 0 0
+1718 10 1 0 1753088 60 0 784 -128 333 0 0
+1718 10 1 1 1753088 60 1 784 127 333 0 0
+1796 11 0 0 1753088 60 0 1024 -128 256 0 0
+1796 11 0 1 1753088 60 1 1024 127 256 0 0
+1875 11 1 0 1753088 60 0 784 -128 333 0 0
+1875 11 1 1 1753088 60 1 784 127 333 0 0
+1953 12 0 0 1753088 60 0 784 -128 256 0 0
+1953 12 0 1 1753088 60 1 784 127 256 0 0
+2031 12 1 0 1753088 60 0 544 -128 333 0 0
+2031 12 1 1 1753088 60 1 544 127 333 0 0
+2109 13 0 0 1753088 60 0 544 -128 346 0 0
+2109 13 0 1 1753088 60 1 544 127 346 0 0
+2187 13 1 0 1753088 60 0 304 -128 359 0 0
+2187 13 1 1 1753088 60 1 304 127 359 0 0
+2265 14 0 0 1753088 60 0 1024 -128 373 0 0
+2265 14 0 1 1753088 60 1 1024 127 373 0 0
+2343 14 1 0 1753088 60 0 1024 -128 322 0 0
+2343 14 1 1 1753088 60 1 1024 127 322 0 0
+2421 15 0 0 1753088 60 0 1024 -128 335 0 0
+2421 15 0 1 1753088 60 1 1024 127 335 0 0
+2500 15 1 0 1753088 60 0 1024 -128 349 0 0
+2500 15 1 1 1753088 60 1 1024 127 349 0 0
+2578 16 0 0 1753088 60 0 1024 -128 362 0 0
+2578 16 0 1 1753088 60 1 1024 127 362 0 0
+2656 16 1 0 1753088 60 0 1024 -128 375 0 0
+2656 16 1 1 1753088 60 1 1024 127 375 0 0
+2734 17 0 0 1753088 60 0 1024 -128 325 0 0
+2734 17 0 1 1753088 60 1 1024 127 325 0 0
+2812 17 1 0 1753088 60 0 1024 -128 338 0 0
+2812 17 1 1 1753088 60 1 1024 127 338 0 0
+2890 18 0 0 1753088 60 0 1024 -128 351 0 0
+2890 18 0 1 1753088 60 1 1024 127 351 0 0
+2968 18 1 0 1753088 60 0 1024 -128 364 0 0
+2968 18 1 1 1753088 60 1 1024 127 364 0 0
+3046 19 0 0 1753088 60 0 1024 -128 378 0 0
+3046 19 0 1 1753088 60 1 1024 127 378 0 0
+3125 19 1 0 1753088 60 0 1024 -128 327 0 0
+3125 19 1 1 1753088 60 1 1024 127 327 0 0
+3203 20 0 0 1753088 60 0 1024 -128 256 0 0
+3203 20 0 1 1753088 60 1 1024 127 256 0 0
+3281 20 1 0 1753088 60 0 784 -128 333 0 0
+3281 20 1 1 1753088 60 1 784 127 333 0 0
+3515 22 0 0 1753088 60 0 1024 -128 0 0 0
+3515 22 0 1 1753088 60 1 1024 127 0 0 0
+3593 22 1 0 1753088 60 0 784 -128 333 0 0
+3593 22 1 1 1753088 60 1 784 127 333 0 0
+3671 23 0 0 1753088 60 0 784 -128 346 0 0
+3671 23 0 1 1753088 60 1 784 127 346 0 0
+3750 23 1 0 1753088 60 0 784 -128 359 0 0
+3750 23 1 1 1753088 60 1 784 127 359 0 0
+4765 30 0 0 1753088 60 0 1024 -128 256 0 0
+4765 30 0 1 1753088 60 1 1024 127 256 0 0
+4843 30 1 0 1753088 60 0 784 -128 333 0 0
+4843 30 1 1 1753088 60 1 784 127 333 0 0
+5390 34 0 0 1753088 60 0 1024 -128 0 0 0
+5390 34 0 1 1753088 60 1 1024 127 0 0 0
+5468 34 1 0 1753088 60 0 784 -128 333 0 0
+5468 34 1 1 1753088 60 1 784 127 333 0 0
+5546 35 0 0 1753088 60 0 1024 -128 346 0 0
+5546 35 0 1 1753088 60 1 1024 127 346 0 0
+5625 35 1 0 1753088 60 0 784 -128 359 0 0
+5625 35 1 1 1753088 60 1 784 127 359 0 0
+5859 37 0 0 1753088 60 0 1024 -128 0 0 0
+5859 37 0 1 1753088 60 1 1024 127 0 0 0
+5937 37 1 0 1753088 60 0 784 -128 333 0 0
+5937 37 1 1 1753088 60 1 784 127 333 0 0
+6015 38 0 0 1753088 60 0 1024 -128 256 0 0
+6015 38 0 1 1753088 60 1 1024 127 256 0 0
+6093 38 1 0 1753088 60 0 784 -128 333 0 0
+6093 38 1 1 1753088 60 1 784 127 333 0 0
+6171 39 0 0 1753088 60 0 1024 -128 256 0 0
+6171 39 0 1 1753088 60 1 1024 127 256 0 0
+6250 39 1 0 1753088 60 0 784 -128 333 0 0
+6250 39 1 1 1753088 60 1 784 127 333 0 0
